# FastAPI_PY_PRA

./: README.md  temp.ipynb
.github/: copilot-instructions.md
01_BASIC/: animal.py
api/: __init__.py
ch02/01_BASIC/: animal.py  dog.py
ch02/02_DECORATOR/: temp.py
ch03/: readme.md
ch04_Docker_Image/: Dockerfile  docker-compose.yaml  pyproject.toml  temp.ipynb
ch04_Docker_Image/api/: __init__.py  db.py  main.py  migrate_db.py
ch04_Docker_Image/api/cruds/: done.py  task.py
ch04_Docker_Image/api/models/: task.py
ch04_Docker_Image/api/routers/: done.py  task.py
ch04_Docker_Image/api/schemas/: task.py
ch04_Docker_Image/tests/: test_main.py
