[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = "Minimal FastAPI demo for ch04 Docker image"
authors = ["you <you@example.com>"]
packages = [ { include = "api" } ]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
